Task 1 wright html code for Products of the week frame

--- a/01-product-card/index.html
+++ b/01-product-card/index.html
@@ -11,6 +11,80 @@
 <body>
 <main>
 <!-- Напиши разметку на этом месте и больше ничего не трогай -->
+    <div class="page-title-container">
+        <h1 class="page-title">
+            ТОВАРЫ НЕДЕЛИ
+        </h1>
+    </div>
+    <div class="cards-container">
+        <article class="card">
+            <header class="card__cover" style="background-image: url('./images/orange.jpg')">
+                <div class="card__badges">
+                    <div class="badge badge--pink">НОВИНКА</div>
+                    <div class="badge badge--orange">ПОСЛЕДНИЙ</div>
+                </div>
+            </header>
+            <main class="card__body">
+                <div class="card__content">
+                    <h1 class="card__title">
+                        Апельсиновый сок
+                    </h1>
+                    <p class="card__text">
+                        Он придётся по душе, даже если ты слива лиловая, спелая, садовая.
+                    </p>
+                </div>
+                <div class="card__footer">
+                    <button class="order-button">
+                        В КОРЗИНУ
+                    </button>
+                </div>
+            </main>
+        </article>
+        <article class="card">
+            <header class="card__cover" style="background-image: url('./images/orange.jpg')">
+                <div class="card__badges">
+
+                </div>
+            </header>
+            <main class="card__body">
+                <div class="card__content">
+                    <h1 class="card__title">
+                        Апельсиновый сок
+                    </h1>
+                    <p class="card__text">
+                        Он придётся по душе, даже если ты слива лиловая, спелая, садовая. Ну что сказать? Ну что сказать? Устроены так длинные описания.
+                    </p>
+                </div>
+                <div class="card__footer">
+                    <button class="order-button">
+                        В КОРЗИНУ
+                    </button>
+                </div>
+            </main>
+        </article>
+        <article class="card">
+            <header class="card__cover" style="background-image: url('./images/orange.jpg')">
+                <div class="card__badges">
+
+                </div>
+            </header>
+            <main class="card__body">
+                <div class="card__content">
+                    <h1 class="card__title">
+                        Апельсиновый сок
+                    </h1>
+                    <p class="card__text">
+                        Он придётся по душе, даже если ты слива лиловая, спелая, садовая.
+                    </p>
+                </div>
+                <div class="card__footer">
+                    <button class="order-button" disabled>
+                        ЗАКОНЧИЛОСЬ
+                    </button>
+                </div>
+            </main>
+        </article>
+    </div>
 </main>
 </body>
 </html>
